# Brick_text_editor

./: CMakeLists.txt  Makefile  README.md  brick_exit.c  brick_init.c  brick_screen.c  build.sh
Brick_Text_editor/: Brick.c  Brick_exit.c  Makefile  brick.c  brick_exit.c  brick_init.c  brick_screen.c  brick_screen.h
Brick_Text_editor/Brick_core/: Brick_core.c
Brick_Text_editor/Brick_sys/: Brick_sys.c
Brick_Text_editor/core/: brick_buf_api.c  brick_core.c
Brick_Text_editor/core/brick_file/: brick_file_init.c
Brick_Text_editor/include/: Brick.h  Brick_core.h  Brick_sys.h  brick.h  brick_buf_api.h  brick_core.h  brick_exit.h  brick_file_init.h  brick_init.h  brick_termios.h
Brick_Text_editor/system/: brick_sys.c
core/: .brick_core.c.swo  brick_buf_api.c  brick_core.c  brick_termios.c
core/brick_file/: brick_file_init.c
file/: brick_file_edit.c  brick_file_init.c  brick_file_save.c
include/: brick_buf_api.h  brick_core.h  brick_exit.h  brick_file.h  brick_file_edit.h  brick_file_init.h  brick_init.h  brick_sys.h
source/core_module/core_manager/: core_manager.c  core_manager.h
source/core_module/file_manager/: file_functions.h  file_manager.c  file_manager.h
source/core_module/file_manager/file_open/: file_open.c
source/core_module/file_manager/file_save/: file_save.c
source/documents/hardware_module/termios_manager/: termios_intro.md
source/hardware_module/termios_manager/: termios_manager.c  termios_manager.h
source/hardware_module/termios_manager/termios_interface/: termios_interface.c  termios_interface.h
source/window_module/screen_manager/: screen_manager.h
